--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
+		"@svgr/rollup": "^8.1.0",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@types/swiper": "^5.4.3",
