--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
+		"framer-motion": "^12.23.12",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hot-toast": "^2.6.0",
 		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.5.0",
 		"swiper": "^11.2.6",
@@ -29,6 +31,7 @@
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^15.15.0",
+		"prettier": "^3.6.2",
 		"sass-embedded": "^1.86.3",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.24.1",
